tests/snapshots/yaml_suite_snapshots__yaml_suite_BU8L_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "key: &anchor !!map\n  a: b\n"
  from: "https://gist.github.com/anonymous/f192e7dab6da31831f264dbf1947cb83 via @ingydotnet"
  json: "{\n  \"key\": {\n    \"a\": \"b\"\n  }\n}\n"
  name: Node Anchor and Tag on Seperate Lines
  tags: anchor indent 1.3-err tag
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +MAP &anchor <tag:yaml.org,2002:map>\n    =VAL :a\n    =VAL :b\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "key: &anchor\n !!map\n  a: b\n"
