tests/snapshots/yaml_suite_snapshots__yaml_suite_C2SP_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow Mapping Key on two lines
  from: "@perlpunk"
  tags: error flow mapping
  fail: true
  yaml: "[23\n]: 42\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :23\n"
