tests/snapshots/yaml_suite_snapshots__yaml_suite_C2SP_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Flow Mapping Key on two lines
  tags: error flow mapping
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :23\n"
  yaml: "[23\n]: 42\n"
