tests/snapshots/yaml_suite_snapshots__yaml_suite_C4HZ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.24. Global Tags
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761719"
  tags: spec tag alias directive local-tag
  yaml: "%TAG ! tag:clarkevans.com,2002:\n--- !shape\n  # Use the ! handle for presenting\n  # tag:clarkev…"
  tree: "+STR\n +DOC ---\n  +SEQ <tag:clarkevans.com,2002:shape>\n   +MAP <tag:clarkevans.com,2002:circle>…"
  json: "[\n  {\n    \"center\": {\n      \"x\": 73,\n      \"y\": 129\n    },\n    \"radius\": 7\n  },\n  {\n    \"start…"
  dump: "--- !<tag:clarkevans.com,2002:shape>\n- !<tag:clarkevans.com,2002:circle>\n  center: &ORIGIN\n   …"
